--- a/package.json
+++ b/package.json
@@ -11,18 +11,22 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.7.0",
-    "@astrojs/db": "^0.11.6",
-    "@astrojs/markdoc": "^0.11.0",
-    "@astrojs/mdx": "^3.1.1",
+    "@astrojs/db": "0.11.7",
+    "@astrojs/image": "^0.18.0",
+    "@astrojs/markdoc": "0.11.1",
+    "@astrojs/mdx": "3.1.2",
+    "@astrojs/partytown": "^2.1.1",
     "@astrojs/react": "^3.6.0",
     "@astrojs/sitemap": "^3.1.6",
     "@astrojs/tailwind": "^5.1.0",
-    "@astrojs/vercel": "^7.7.1",
+    "@astrojs/vercel": "7.7.2",
     "@hookform/resolvers": "^3.6.0",
     "@iconify-json/lucide": "^1.1.194",
     "@iconify-json/mdi": "^1.1.67",
     "@iconify-json/ri": "^1.1.21",
+    "@iconify-json/tabler": "^1.1.114",
     "@iconify/react": "^5.0.1",
+    "@mermaid-js/mermaid-cli": "^10.9.1",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-label": "^2.1.0",
@@ -31,9 +35,10 @@
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-tabs": "^1.1.0",
     "@sentry/astro": "^8.11.0",
+    "@southball/remark-mermaid": "^0.5.0",
     "@spotlightjs/astro": "^2.0.0",
     "@tailwindcss/typography": "^0.5.13",
-    "astro": "^4.11.0",
+    "astro": "4.11.3",
     "astro-icon": "^1.1.0",
     "astro-seo": "^0.8.4",
     "class-variance-authority": "^0.7.0",
@@ -41,12 +46,20 @@
     "framer-motion": "^11.2.11",
     "import-in-the-middle": "^1.8.1",
     "lucide-react": "^0.396.0",
+    "mermaid.cli": "^0.5.1",
     "react-hook-form": "^7.52.0",
+    "remark-math": "^6.0.0",
+    "remark-mermaid": "^0.2.0",
+    "remark-mermaidjs": "^6.0.0",
     "simple-stack-form": "^0.1.12",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss": "^3.4.4",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.5.2"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "1.8.3",
+    "prettier-plugin-astro": "^0.14.0"
   }
 }
